X3 C++ PluginFramework

2011-02-14

    * Compile and fix projects using MinGW and GCC 4.5.1.
    * Add Code::Blocks 10.05 projects (converted from x3_vc60).
    * Support MFC dialog application and console application in cppunit test applications.
    * Rename MSXML DOM namespace in ConfigXml plugin.

    
------v1.0.5------

2011-02-08

    * PluginManager: Implement Ix_PluginDelayLoad to support delay-load feature for observer plugins.
    * ChangeObserver: Support delay-load feature for observer plugins.
    
2011-02-07

    * PluginManager: Implement the delay-loaded feature. Add Ix_AppWorkPath.
    * LogWriter: Using Ix_AppWorkPath to get logging path.
    
2011-02-04

    * PluginManager: Support absolute path in LoadPlugins().
        Unload plugin if fail to call InitializePlugins().
        Add filename in MODULEINFO. Add module index in class map.
        Don't remove element in ReleaseModule().
    
------v1.0.4------

2011-01-18

    * ConfigXml: Delay call CoUninitialize until plugin is unloading.
    
2011-01-15

    * Remove cppunit 1.12.1 include files.
    * Replace StrCpyNW to lstrcpynW (because for VC6 shell32.dll no StrCpyNW entry point in Win7).
    * Simplify license note in *.h and *.cpp.
    
    * PluginManager\PluginManager.h: add TextUtility.plugin.dll in LoadCorePlugins().
    
    * TextUtility v1.0.0.2:
    * TextUtility\Cx_TextUtil.cpp: IsSpaceChar() support '\r' and '\n'.

2011-01-13

    * Move Ix_UIConfig.h to pkg_AppUI. Fix doxyfile files.
    
    * ConfigXml v1.0.0.3: 
    * ConfigXml\Cx_XmlSection.cpp: fix default return value of Cx_XmlSection::Setxxx.

------v1.0.3------

2011-01-12, Zhang Yun Gui <rhcad@hotmail.com>

    * Rename text files(add .txt).
    * Replace tab char to space char in *.h and *.cpp.
    * Replace LPWSTR to wchar*
    * Move FileUtility/TextUtility/LogWriter/ to pkg_Core, Move Ix_ConfigDBFactory.h to Interface\Database\.
    
    * ConfigDB v1.0.0.2: